--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Intro to WebGPU</title>
+    <link rel="stylesheet" href="/src/styles.css">
   </head>
   <body>
     <canvas id="webgpu-canvas"></canvas>
